Saldo do Motoboy vindo da API

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,9 @@ buildscript {
     }
 
     dependencies {
-		classpath 'com.android.tools.build:gradle:7.3.0'
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-	}
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 allprojects {
@@ -21,8 +21,6 @@ allprojects {
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(':app')
 }
 
@@ -30,5 +28,8 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
-// Adicione esta linha no final do arquivo
-gradle.projectsEvaluated { tasks.withType(JavaCompile).configureEach { options.compilerArgs << "-Xlint:deprecation" } }
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs << "-Xlint:deprecation"
+    }
+}
