--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   universal_platform: ^1.0.0+1  
+  dio: ^4.0.0  
 
 dev_dependencies:
   flutter_test:
