--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,15 +21,14 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+}
 
 android {
-	compileSdkVersion 33
-    namespace "com.example.teletudoapp3" // Adicione esta linha
     compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    namespace "com.example.teletudoapp3"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,14 +46,17 @@ android {
     defaultConfig {
         applicationId "com.example.tele_tudo_app"
         minSdkVersion flutter.minSdkVersion
-        targetSdkVersion 33
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            // Configure the signing if necessary
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            useProguard false
         }
     }
 }
@@ -64,5 +66,7 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
+
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
