--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,9 @@ allprojects {
 
 rootProject.buildDir = '../build'
 subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    if (project.name != 'shared_preferences_android') {
+        project.buildDir = "${rootProject.buildDir}/${project.name}"
+    }
     project.evaluationDependsOn(':app')
 }
 
